--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 						<div class="row mt-4 mb-2">
 							<ul class="langs-list">
 								<li>Armenian — Native</li>
-								<li>English — Pre-Intermediate</li>
+								<li>English — Lower-Intermediate</li>
 								<li>Russian — Upper-Intermediate</li>
 							</ul>
 						</div>
