added code for analytics

--- a/index.html
+++ b/index.html
@@ -11,17 +11,41 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com/">
 
 	<!-- SEO Meta Tags -->
-    <meta name="description" content="Mamikon Arustamyan is a web developer specializing in front-end and back-end solutions using WordPress. Offering expertise in SEO, web analytics, website administration, and technical support.">
-    <meta name="keywords" content="web developer, WordPress, SEO, website administration, technical support, web analytics">
-    <meta name="author" content="Mamikon Arustamyan">
+	<meta name="description"
+		content="Mamikon Arustamyan is a web developer specializing in front-end and back-end solutions using WordPress. Offering expertise in SEO, web analytics, website administration, and technical support.">
+	<meta name="keywords"
+		content="web developer, WordPress, SEO, website administration, technical support, web analytics">
+	<meta name="author" content="Mamikon Arustamyan">
 
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Mamikon Arustamyan - Web Developer">
-    <meta property="og:description" content="Mamikon Arustamyan is a web developer with expertise in creating and managing websites using WordPress. Specializing in SEO, web analytics, and technical support.">
-    <meta property="og:image" content="assets/img/Mamikon.jpg"> <!-- Replace with your image URL -->
-    <meta property="og:url" content="https://marstamyan.github.io/portfolio/"> <!-- Replace with your website URL -->
-    <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Mamikon Arustamyan">
+	<!-- Open Graph Meta Tags -->
+	<meta property="og:title" content="Mamikon Arustamyan - Web Developer">
+	<meta property="og:description"
+		content="Mamikon Arustamyan is a web developer with expertise in creating and managing websites using WordPress. Specializing in SEO, web analytics, and technical support.">
+	<meta property="og:image" content="assets/img/Mamikon.jpg"> <!-- Replace with your image URL -->
+	<meta property="og:url" content="https://marstamyan.github.io/portfolio/"> <!-- Replace with your website URL -->
+	<meta property="og:type" content="website">
+	<meta property="og:site_name" content="Mamikon Arustamyan">
+	<!-- Yandex.Metrika counter -->
+	<script type="text/javascript">
+		(function (m, e, t, r, i, k, a) {
+			m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+			m[i].l = 1 * new Date();
+			for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
+			k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+		})
+			(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+		ym(98469732, "init", {
+			clickmap: true,
+			trackLinks: true,
+			accurateTrackBounce: true,
+			webvisor: true
+		});
+	</script>
+	<noscript>
+		<div><img src="https://mc.yandex.ru/watch/98469732" style="position:absolute; left:-9999px;" alt="" /></div>
+	</noscript>
+	<!-- /Yandex.Metrika counter -->
 </head>
 
 <body class="vsc-initialized">
@@ -155,25 +179,26 @@
 					<div id="experience" class="section mt-3 mt-md-3 p-3 p-md-3 rounded">
 						<h3 class="mb-3 text-uppercase">Work Experience</h3>
 						<div class="row mt-4 mb-2">
-							<div class="col-6"> 
-								<span class="tiny-super font-weight-bold">Gaming Website Administrator</span> 
+							<div class="col-6">
+								<span class="tiny-super font-weight-bold">Gaming Website Administrator</span>
 								<span class="tiny-super d-block mb-4">Personal Project</span>
 							</div>
-							<div class="col-6 text-right"> 
-								<span class="tiny-super">2017 - 2019</span> 
-							</div>
-
-							<div class="col-6"> 
-								<span class="tiny-super font-weight-bold">Web Developer / WordPress
-								</span> 
-								<span class="tiny-super d-block mb-4">Freelance</span> 
-							</div>
-							<div class="col-6 text-right"> 
-								<span class="tiny-super">2019 - Present</span> 
+							<div class="col-6 text-right">
+								<span class="tiny-super">2017 - 2019</span>
 							</div>
 
 							<div class="col-6">
-								<span class="tiny-super font-weight-bold">Web Developer & <br> Website Support / Administration</span>
+								<span class="tiny-super font-weight-bold">Web Developer / WordPress
+								</span>
+								<span class="tiny-super d-block mb-4">Freelance</span>
+							</div>
+							<div class="col-6 text-right">
+								<span class="tiny-super">2019 - Present</span>
+							</div>
+
+							<div class="col-6">
+								<span class="tiny-super font-weight-bold">Web Developer & <br> Website Support /
+									Administration</span>
 								<span class="tiny-super d-block">Office Position</span>
 							</div>
 							<div class="col-6 text-right">
